...
                <HStack className="items-center gap-x-2">
                  <ArrowDownUp
                    size={16}
                    color={themeConfig.theme.colors.white}
                  />
                  <Text className="text-white font-bold">
                    {sort === "addedAt" ? "Recent" : "Alphabetical"}
                  </Text>
                </HStack>
              </FadeOutScaleDown>
              <FadeOutScaleDown onPress={handleLayoutPress}>
                {layout === "list" ? (
                  <LayoutGrid
...
