...
                    </BadgeText>
                  </Badge>
                </FadeOutScaleDown>
              </Badge>
            ) : (
              <FadeOutScaleDown
                testID="home-radio-tab"
                onPress={() =>
                  router.navigate(
                    "/(app)/(tabs)/(home)/internet-radio-stations",
                  )
                }
              >
...
