...
      },
      home: {
        tabTitle: "Home",
        title: "Hi {{username}}",
        recentlyPlayed: "Recently played",
        recentlyAdded: "Recently added",
        mostPlayed: "Most played",
...
        random: "Random",
        randomSongs: "Random songs",
        artists: "Artists",
        yourPlaylists: "Your playlists",
        starred: "Your favorites",
...
          internetRadioStations: "Internet radio stations",
          radio: "Radio",
          radioFavorites: "Favorites",
        },
        sections: {
...
      },
      search: {
        title: "Search",
        inputPlaceholder: "What do you want to listen to ?",
        exploreGenres: "Explore genres",
        recentSearches: "Recent searches",
        clearRecentSearches: "Clear all",
      },
      library: {
        title: "Library",
        searchPlaceholder: "Search your library",
        recentSort: "Recent",
        alphabeticalSort: "Alphabetical",
        artistSort: "Artist",
...
        random: "Random",
        library: "Library",
        playlists: "Playlists",
        albums: "Albums",
        podcasts: "Podcasts",
        favorites: "Favorites",
...
      },
      albums: {
        addToPlaylist: "Add to playlist",
        playNext: "Play next",
        addToQueue: "Add to queue",
        goToArtist: "Go to artist",
        rate: "Rate",
        share: "Share",
...
        shareErrorMessage: "An error occurred while sharing the album",
        rateModalTitle: "Rate album",
        seeAll: "See all",
        addAllToFavorites: "Add all songs to favorites",
        addAllToFavoritesSuccessMessage:
...
        label: "Artist",
        coverAlt: "Artist cover",
        topSongs: "Top songs",
        discography: "Discography",
        appearsOn: "Appears on",
        about: "About",
...
      favorites: {
        title: "Favorites",
        favorite_tracks: "Favorite tracks",
        searchPlaceholder: "Search your favorite tracks",
      },
      playlists: {
...
          "An error occurred while removing the track from the playlist",
        addToPlaylistTitle: "Add to playlist",
        newPlaylist: "New playlist",
        finished: "Finished",
        addTrackSuccessMessage_one: "Song successfully added to playlist",
        addTrackSuccessMessage_other: "Songs successfully added to playlist",
...
        title: "Profile",
        playlists: "Playlists",
        edit: "Edit",
        noPlaylists: "No playlists",
      },
      editProfile: {
        title: "Edit profile",
        infoSection: "Account",
        passwordSection: "Password",
...
        roleLabels: {
          admin: "Admin",
          settings: "Settings",
          stream: "Stream",
          jukebox: "Jukebox",
...
            "Deleting these is irreversible. Please confirm if you want to proceed.",
          recentPlaysSuccessMessage: "Recent plays successfully deleted",
          activityLabel: "Activity",
          activityDescription:
            "Delete your activity history of played albums, artists and playlists",
...
      },
      internetRadioStations: {
        searchPlaceholder: "Search radio stations",
        searchInputPlaceholder: "Search",
        favoritesTitle: "Favorites",
...
      },
      queue: {
        title: "Queue",
        empty: "The queue is empty.",
        edit: "Edit",
        done: "Done",
...
        rate: "Rate",
        share: "Share",
        getInfo: "Get info",
        download: "Download",
        musicBrainz: "Open in MusicBrainz",
...
        similarSongs: "Similar songs",
        similarSongsTitle: "Tracks similar to: {{title}}",
        trackInfoModalTitle: "Track info",
        rateModalTitle: "Rate track",
        creditsModalTitle: "Track credits",
...
      },
      shares: {
        title: "Shares",
        visitCount_one: "{{count}} visit",
        visitCount_other: "{{count}} visits",
...
      },
      libraries: {
        title: "Libraries",
        allLibraries: "All libraries",
        default: "Default library",
        empty: "No libraries available",
      },
      servers: {
        title: "Servers",
        addServer: "Add server",
        namePlaceholder: "Enter server name",
...
        podcast_other: "Podcasts",
        radioStation_one: "Radio station",
        radioStation_other: "Radio stations",
        folder_one: "Folder",
        folder_other: "Folders",
        song_one: "Song",
        song_other: "Songs",
...
          servers: "Servers",
          libraries: "Libraries",
          logout: "Logout",
          switchUser: "Switch user",
          currentServer: "Current server",
          version: "version {{version}}",
          seeProfile: "See profile",
          privacyPolicy: "Privacy policy",
          bugReport: "Report a bug",
...
    auth: {
      login: {
        title: "Sign in",
        serverPlaceholder: "Select server",
        serverTypeNavidrome: "Navidrome",
...
        hidePassword: "Hide password",
        saveCredentials: "Save credentials",
        demo: "Demo mode",
        navidromeSetupHelp: "Setup your Navidrome server",
        jellyfinSetupHelp: "Setup your Jellyfin server",
...
