...
                <Heading className="text-white" size="2xl">
                  {t("app.library.title")}
                </Heading>
              </HStack>
              <HStack className="items-center gap-x-4">
                <FadeOutScaleDown
                  testID="library-search-button"
                  onPress={handleSearchPress}
                >
                  <Search color={white} />
                </FadeOutScaleDown>
                <FadeOutScaleDown
                  testID="library-create-button"
...
