...
    form.setFieldValue("password", "");
    form.setFieldValue("type", server.type);
    setTimeout(() => usernameRef.current?.focus(), 250);
  };

  const handleDemoModePress = () => {
    form.setFieldValue("url", "https://demo.navidrome.org");
    form.setFieldValue("username", "demo");
    form.setFieldValue("password", "demo");
    form.setFieldValue("type", "navidrome");
  };

  const serverTypeOptions: { value: ServerType; label: string }[] = [
...
