...
        style={{ marginBottom: insets.bottom, marginTop: insets.top }}
      >
        <ModalHeader>
          <Heading className="text-white">
            {t("app.tracks.trackInfoModalTitle")}
          </Heading>
          <ModalCloseButton testID="track-info-close-button">
            <Icon as={X} size="md" className="color-white" />
          </ModalCloseButton>
        </ModalHeader>
        <ModalBody className="mb-0 pb-0" showsVerticalScrollIndicator={false}>
          {track && (
            <VStack className="gap-y-2">
...
