...
            ) : (
              <Circle size={24} color={gray300} />
            )}
          </Box>
        ) : (
          <FadeOutScaleDown
            testID="track-menu-button"
            onPress={handlePresentModalPress}
            disabled={isUnavailableOffline}
            disabledOpacity={0.8}
          >
            <EllipsisVertical color={gray300} />
          </FadeOutScaleDown>
...
